--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,9 +16,8 @@
     "ms-python.python",
     "AmazonWebServices.aws-toolkit-vscode",
     "ms-kubernetes-tools.vscode-kubernetes-tools",
-    "ms-azuretools.vscode-aks-tools",
+    "ms-azuretools.vscode-aks-tools"
   ],
-    "remoteUser": "dev",
-  "updateContentCommand": "true",
+  "remoteUser": "dev",
   "overrideCommand": false
 }
